src/main/java/com/example/crm/validates/TransactionValidator.java
package com.example.crm.validates;

public class TransactionValidator {
}
